--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "build": "gulp",
     "watch": "gulp watch",
     "doc": "gulp doc",
-    "testWindows7chrome": "node node_modules/intern/runner.js config=test/functional/testsCommon.js browsers=chrome_windows7 selenium=local application=development",
-    "testWindows7firefox": "node node_modules/intern/runner.js config=test/functional/testsCommon.js browsers=firefox_windows7 selenium=local application=development",
-    "testWindows7internetExplorer": "node node_modules/intern/runner.js config=test/functional/testsCommon.js browsers=ie11_windows7 selenium=local application=development",
-    "testWindows10edge": "node node_modules/intern/runner.js config=test/functional/testsCommon.js browsers=edge_windows10 selenium=local application=development",
-    "test_local": "node node_modules/intern/runner.js config=test/functional/testsCommon.js browsers=chrome_windows7 selenium=local application=local"
+    "testLinuxchrome": "node node_modules/intern/runner.js config=test/functional/testsCommon.js browsers=chrome_linux selenium=local",
+    "testLinuxfirefox": "node node_modules/intern/runner.js config=test/functional/testsCommon.js browsers=firefox_linux selenium=local",
+    "testWindows7chrome": "node node_modules/intern/runner.js config=test/functional/testsCommon.js browsers=chrome_windows7 selenium=local",
+    "testWindows7firefox": "node node_modules/intern/runner.js config=test/functional/testsCommon.js browsers=firefox_windows7 selenium=local",
+    "testWindows7internetExplorer": "node node_modules/intern/runner.js config=test/functional/testsCommon.js browsers=ie11_windows7 selenium=local",
+    "testWindows10edge": "node node_modules/intern/runner.js config=test/functional/testsCommon.js browsers=edge_windows10 selenium=local",
+    "testWindows10firefox": "node node_modules/intern/runner.js config=test/functional/testsCommon.js browsers=firefox_windows10 selenium=local",
+    "testWindows10chrome": "node node_modules/intern/runner.js config=test/functional/testsCommon.js browsers=chrome_windows10 selenium=local"
   },
   "repository": {
     "type": "git",
