--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0",
-    "yargs": "^5.0.0",
-    "intern": "^3.3.1"
+    "yargs": "^5.0.0"
   }
 }
