--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-typescript": "^3.1.6",
     "gulp-uglify": "^1.5.3",
     "gulp-zip": "^3.2.0",
     "intern": "^3.4.4",
@@ -48,6 +49,7 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0",
-    "yargs": "^5.0.0"
+    "yargs": "^5.0.0",
+    "typescript": "^2.2.2"
   }
 }
